# explore-macbook-neural-sfm

./: .env  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
config/frames2pts3d/: config.yaml  full.yaml  vggtomega_full.yaml
experiments/: README.md
experiments/frames2pts3d/: launch_teensy.sh
experiments/frames2pts3d/dunemast3r/: launch_full.sh  launch_teensy.sh
experiments/frames2pts3d/vggtomega/: README.md  launch_full.sh  launch_teensy.sh
experiments/worldmirror2/: README.md  launch.sh
mlx-mast3r/: .gitignore  .gitmodules  README.md  pyproject.toml
mlx-mast3r/docs/: BENCHMARKS.md
mlx-mast3r/examples/: demo_dune.py  demo_dunemast3r.py  demo_mast3r.py  gradio_demo.py
mlx-mast3r/examples/gradio_tabs/: __init__.py  about.py  features.py  multiview.py  stereo.py
mlx-mast3r/examples/gradio_utils/: __init__.py  export.py  models.py  viz.py
mlx-mast3r/scripts/: benchmark_complete.py  convert_dune_to_safetensors.py  convert_to_mlx_optimized.py
mlx-mast3r/src/mlx_mast3r/: __init__.py  constants.py  image_pairs.py  layers.py  models.py  retrieval.py  types.py  viz.py
mlx-mast3r/src/mlx_mast3r/cloud_opt/: __init__.py  canonical.py  correspondences.py  focal.py  focal_estimation.py  geometry.py  losses.py  optimizer.py  pair_viewer.py  scene.py  schedules.py  sparse_ga.py  triangulation.py  tsdf.py  utils.py
mlx-mast3r/src/mlx_mast3r/decoders/: __init__.py  dunemast3r.py  mast3r.py  weight_loader.py
mlx-mast3r/src/mlx_mast3r/encoders/: __init__.py  base.py  dune.py  mast3r.py
mlx-mast3r/src/mlx_mast3r/kernels/: __init__.py  bilinear.py  grid_sample.py  rope2d.py
mlx-mast3r/src/mlx_mast3r/utils/: __init__.py  download.py  postprocessing.py  preprocessing.py
outputs/2026-06-25/14-21-40/.hydra/: hydra.yaml
outputs/2026-06-25/14-21-59/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-25/15-31-27/.hydra/: config.yaml  (+1 more)
reports/experiments/current_experiment/: worldmirror2_summary.txt  worldmirror2_teensy_summary.txt
reports/work_history/: worldmirror2_setup.md  worldmirror2_teensy_experiment.md
scripts/: frames2pts3d.py  frames2pts3d_vggtomega.py  pointcloud_to_gaussian_splat.py  run_worldmirror2.py  setup.sh  visualize_dune_pos_embeddings.py  worldmirror2_to_ply.py
scripts/archive/: visualize_cradio_pos_embeddings.py
scripts/archive/adapt-quickstart-e2/: e2_reduce_position_bias_by_recentering_cradio.py  e2_show_cossim_position_bias_on_image_pair_cradio.py
scripts/early_exploration/: visualize_vggt_omega_special_embeddings.py
scripts/early_exploration/expand-quickstart-e2/: e2_show_cossim_position_bias_avg.py
scripts/expand-quickstart-e2/: e2_annotate-patches.py  e2_reduce_position_bias_by_recentering.py  e2_reduce_position_bias_by_slicing.py  e2_reduce_position_bias_by_windowing.py  e2_show_cossim_position_bias_on_image_pair.py
scripts/expand-quickstart-e4/: expand_e4.py
scripts/expand-quickstart-examples/: e2_annotate-patches.py  e2_cos-sim-patch-matching.py
scripts/inner_repo_scripts/: _pointcloud_io.py  _progress.py  run_worldmirror2.py
scripts/try-quickstart-examples/: e1.py  e2.py  e3.py  e4.py  e5.py
video_vision_repo/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  run_server.bat  run_server.sh  tsconfig.json  vite.config.ts
video_vision_repo/scripts/: _device.py  align_scene.py  build_object_pointmap.py  detect_object.py  extract_frames.py  run_boxer.py  run_colmap.py  run_cut3r.py  run_da3.py  run_depth.py  run_dinov3.py  run_infinidepth.py  run_mapanything.py  run_pi3.py  run_vggt.py  run_vggtomega.py  run_wilddet3d.py  run_wilddet3d_scene.py  run_worldmirror.py  run_worldmirror2.py  track_object.py
video_vision_repo/setup/: 00_venv.py  EVERYTHING.py  INSTALL.py  _lib.py  plugin_boxer.py  plugin_colmap.py  plugin_cut3r.py  plugin_da3.py  plugin_depthanythingv2.py  plugin_dinov3.py  plugin_infinidepth.py  plugin_mapanything.py  plugin_pi3.py  plugin_sam.py  plugin_vggt.py  plugin_vggtomega.py  plugin_wilddet3d.py  plugin_worldmirror.py  plugin_worldmirror2.py
video_vision_repo/setup/patches/: cut3r-curope-modern-pytorch.patch  cut3r-fallback-rope-and-load.patch
video_vision_repo/src/: App.tsx  DinoV3Viewer.tsx  ThreeDepthViewer.tsx  boxSolverPlugins.ts  chunkedPointcloud.ts  depthMesh.ts  npz.ts  pointcloudMesh.ts  scenePlugins.ts
(+9 files in other folders)
