[project]
name = "explore-macbook-neural-sfm"
version = "0.1.0"
description = "Dense feature extraction from video frames for 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.20.0",
    "numpy>=1.26.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
    "huggingface-hub>=0.20.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "opencv-python>=4.8.0",
    "diffusers>=0.24.0",
    "transformers>=4.36.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "plyfile>=1.0.0",
    "matplotlib>=3.8.0",
    "kornia>=0.7.0",
    "peft>=0.4.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "trimesh>=4.0.0",
    "imageio>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
torch = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.0",
    "einops>=0.7.0",
]
demo = [
    "gradio>=4.0.0",
    "trimesh>=4.0.0",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.8.0",
]
all = ["explore-macbook-neural-sfm[dev,torch,demo]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
